...
                onPressed: () => Navigator.push(
                  context,
                  MaterialPageRoute(
                    builder: (_) => WorldsView(loadImage: loadImage),
                  ),
                ),
                child: const Text('ابدأ'),
              ),
              ElevatedButton(
                style: buttonStyle,
                onPressed: () => Navigator.push(
                  context,
                  MaterialPageRoute(
...
